[project]
name = "puzzle_party"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["maturin>1.0, <2.0"]
build-backend = "maturin"

[tool.maturin]
name = "puzzle_party"
universal-wheels = true
target = {
    "x86_64-pc-windows-msvc": {},
    "x86_64-unknown-linux-gnu": {},
    "aarch64-apple-darwin": {},
}
features = ["pyo3/extension-module"]
package = { include = ["puzzle_party.pyi"] }
